preload images to avoid jump
more tricks for the browser

--- a/styles/index.less
+++ b/styles/index.less
@@ -151,6 +151,10 @@ a {
 
 }
 
+.preload {
+  display: none;
+}
+
 @keyframes galleryfade {
   0% {
     background-image: url("/images/ios-gallery/f1.png");
